# project-royex

./: .env_example  .gitignore  README.md  new-indexer.py  openapi.json  pyproject.toml
apiserver/: config.py  indexer.py  main.py
apiserver/abis/: InitialRoyaltyOffering.json  RoyaltyExchange.json  RoyaltyPaymentPool.json  RoyaltyToken.json  StakeholderCollective.json  __init__.py
apiserver/database/: __init__.py  models.py
apiserver/database/queries/: create_database.sql  drop_database.sql  insert_otc_market.sql  insert_royalty_token.sql
apiserver/routers/: collectives.py  common.py  commune.py  initial_royalty_offerings.py  otc_markets.py  portfolios.py  protocol.py  public_royalty_offerings.py  royalty_exchanges.py  royalty_payment_pools.py  royalty_tokens.py
contracts/: .env.example  .gitignore  README.md  hardhat.config.ts  package-lock.json  package.json
contracts/abi/: InitialRoyaltyOffering.json  InitialRoyaltyOffering.ts  OtcMarket.json  OtcMarket.ts  RoyaltyExchange.ts  RoyaltyPaymentPool.json  RoyaltyPaymentPool.ts  RoyaltyToken.ts  Stablecoin.ts  StakeholderCollective.ts
contracts/contracts/InitialRoyaltyOffering/: IRXRC5.sol  InitialRoyaltyOffering.sol  RXRC5.sol
contracts/scripts/: deploy-all.ts  deploy.ts  extract-abi.ts
contracts/tasks/: extract-abi.ts
contracts/test/: ERC20Checkpoint.ts  OtcMarket.ts  RoyaltyExchange.ts  RoyaltyPaymentPool.ts
indexer/: run.py
web/: .env.example  .eslintrc.json  .prettierignore  .prettierrc  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
web/src/app/: error.tsx  (+5 more)
(+202 files in other folders)
