[tool.poetry]
name = "project-royex"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"


[build-system]
requires = [
    "poetry-core",
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv",
    "pydantic"
]
build-backend = "poetry.core.masonry.api"