[tool.poetry]
name = "project-royex"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlmodel = "^0.0.11"


[build-system]
requires = [
    "poetry-core"
]
build-backend = "poetry.core.masonry.api"